--- a/frontend/src/components/TitleDetailsCard.module.css
+++ b/frontend/src/components/TitleDetailsCard.module.css
@@ -29,11 +29,6 @@
   border-radius: 4px;
 }
 
-.directorLink:hover {
-  color: var(--primary-color);
-  text-decoration: underline;
-}
-
 .commonSenseWrapper {
   display: flex;
   align-items: center;
@@ -51,4 +46,18 @@
   border-radius: 3px;
   padding: 0 5px;
   margin-right: 7px;
+}
+
+@media (hover: hover) and (pointer: fine) {
+  .directorLink:hover {
+    color: var(--primary-color);
+    text-decoration: underline;
+  }
+}
+
+@media (hover: none) {
+  .directorLink:active {
+    color: var(--primary-color);
+    text-decoration: underline;
+  }
 }
